# aptos-infinite-jukebox

./: .gitignore  .gitmodules  LEARNING.md  README.md
.github/: filters.yml
.github/workflows/: build_android.yml  build_android.yml.bak  build_driver.yml  build_driver.yml.bak  build_web.yml  full_ci.yml  push_to_gar.yml.bak
aptos_infinite_jukebox/: README.md  pubspec.yaml
aptos_infinite_jukebox/android/: gradle.properties
aptos_infinite_jukebox/ios/: .gitignore
aptos_infinite_jukebox/lib/: common.dart  constants.dart  globals.dart  help_page_common.dart  home_page.dart  logged_in_page.dart  login_page.dart  main.dart  make_vote_page.dart  page_selector.dart  playback_manager.dart  player_page.dart  player_selector.dart  settings_page.dart  to_delete_home_page.dart  troubleshooting_help_page.dart  tuned_in_page.dart  vote_results_page.dart  voting_page.dart
aptos_infinite_jukebox/test/: widget_test.dart
aptos_infinite_jukebox/web/: index.html
deployment/: README.md
deployment/base/: Pulumi.prod.yaml  Pulumi.yaml  index.ts  package-lock.json  package.json
deployment/driver/: Pulumi.prod.yaml  Pulumi.yaml  index.ts  package-lock.json  package.json
deployment/web/: Pulumi.prod.yaml  Pulumi.yaml  index.ts  package-lock.json  package.json
driver/: .dockerignore  Cargo.toml  Dockerfile  README.md  run_periodically.sh  setup_wallet.sh
driver/src/: aptos_helper.rs  cache_helper.rs  main.rs  spotify.rs
frontend/: README.md  pubspec.yaml
move/: Move.toml  README.md
move_module/: Move.toml  README.md
site/: auth_callback.html  index.html
(+35 files in other folders)
