[package]
name = "driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
base64 = "0.13"
clap = { version = "3", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "testnet" }
aptos-rest-client = { git = "https://github.com/aptos-labs/aptos-core", branch = "testnet" }
